Write query handler

--- a/public/connect.html
+++ b/public/connect.html
@@ -74,11 +74,7 @@
                         <input type="text" id="signup-lastname" name="signup-lastname" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label for="signup-birthday" style="margin-top: 10px;">Birthday</label>
-                        <input type="date" id="signup-birthday" name="signup-birthday" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="signup-email" style="margin-top: 10px;">Email or Username</label>
+                        <label for="signup-email" style="margin-top: 10px;">Email</label>
                         <input type="text" id="signup-email" name="signup-email" class="form-control" required>
                     </div>
                     <div class="form-group">
