Created the pos and mgr routes

--- a/public/carousel.html
+++ b/public/carousel.html
@@ -26,19 +26,15 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="/feature" class="nav-link px-2 text-white">Restaurants</a></li>
-          <li><a href="/entertainment" class="nav-link px-2 text-white">Entertainment</a></li>
-          <li><a href="/pricing" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="/sales" class="nav-link px-2 text-white">Sales</a></li>
+          <li><a href="/restaurants" class="nav-link px-2 text-white">Restaurants</a></li>
+          <li><a href="/events" class="nav-link px-2 text-white">Events</a></li>
+          <li><a href="/tickets" class="nav-link px-2 text-white">Tickets</a></li>
           <li><div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Management
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="./repair log.html">Repair Log</a></li>
-              <li><a class="dropdown-item" href="./reservation.html">Reservation</a></li>
-              <li><a class="dropdown-item" href="./addingitem.html">Adding Item</a></li>
-              <li><a class="dropdown-item" href="./visitor.html">Visitors</a></li>
+              <li><a class="dropdown-item" href="/profile">Reservation</a></li>
             </ul>
           </div></li>
           
